tests/ui/boolean_enforcement/fail/and_text_input.stderr
error[E0277]: `drizzle::postgres::types::Text` is not a boolean SQL type
  --> tests/ui/boolean_enforcement/fail/and_text_input.rs:14:17
   |
14 |     let _ = and(user.name, user.name);
   |             --- ^^^^^^^^^ logical operations require a boolean-typed expression
   |             |
   |             required by a bound introduced by this call
   |
   = help: the trait `BooleanLike` is not implemented for `drizzle::postgres::types::Text`
help: the following other types implement trait `BooleanLike`
  --> types/src/sql/mod.rs
   |
   | impl BooleanLike for crate::sqlite::types::Integer {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::ddl::sqlite::types::Integer`
...
   | impl BooleanLike for crate::postgres::types::Boolean {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::postgres::types::Boolean`
note: required by a bound in `and`
  --> core/src/expr/logical.rs
   |
   | pub fn and<'a, V, L, R>(
   |        --- required by a bound in this function
...
   |     L::SQLType: BooleanLike,
   |                 ^^^^^^^^^^^ required by this bound in `and`

error[E0277]: `drizzle::postgres::types::Text` is not a boolean SQL type
  --> tests/ui/boolean_enforcement/fail/and_text_input.rs:14:28
   |
14 |     let _ = and(user.name, user.name);
   |             ---            ^^^^^^^^^ logical operations require a boolean-typed expression
   |             |
   |             required by a bound introduced by this call
   |
   = help: the trait `BooleanLike` is not implemented for `drizzle::postgres::types::Text`
help: the following other types implement trait `BooleanLike`
  --> types/src/sql/mod.rs
   |
   | impl BooleanLike for crate::sqlite::types::Integer {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::ddl::sqlite::types::Integer`
...
   | impl BooleanLike for crate::postgres::types::Boolean {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::postgres::types::Boolean`
note: required by a bound in `and`
  --> core/src/expr/logical.rs
   |
   | pub fn and<'a, V, L, R>(
   |        --- required by a bound in this function
...
   |     R::SQLType: BooleanLike,
   |                 ^^^^^^^^^^^ required by this bound in `and`
